0.12
	+ Added Mail Exchanger model to introduce MX records in domains.
	+ Added mail exchanger model related methods to the exposed API.
	+ Updated remainder models to use lastest types HostIP and
	DomainName
	+ Added 'changeName', 'getHostNameByName', 'getHostNameByIP' and
	'findAlias' to improve DNS API to Perl scripts and SOAP clients
0.11.100
	+ add isRunning and enableService to set firewall properly
	+ onInstall() functionality moved to migration script
	+ Do not remove bind9 rc links
	+ Stop bind9 in pre-start in upstart script
0.11.99
	+ Added `getHostname` to the exposed API to interact with
	webserver module
	+ Now tables are shown sorted by 'name' attribute (domain,
	hostname and alias respectively)
0.11
	+ New release
0.10.99
	+ Expose methods in module's API 
	+ Fix bug in migration pre0.9.100 installations
0.10
	+ New release
0.9.100
	+ Add reverse resolution
	+ Use new model/view framework. UI uses Ajax
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ Added Aragonese translation
	+ Added German    translation

0.8.99
        * Add DNS server functionality
0.7.1	
	* Allow TCP queries
	* Use of ebox-sudoers-friendly
0.7	
	* First public release
0.6
	* API documented using naturaldocs
	* Update install and depends
0.5.2
	* Fix some packaging issues

0.5.1
	* Convert module to new menu system

0.5
	* Initial release