@@ -1,6 +1,8 @@
 0.12
 	+ Added Mail Exchanger model to introduce MX records in domains.
 	+ Added mail exchanger model related methods to the exposed API.
+	+ Check consistencies among alias and hostnames within the same
+	domain
 	+ Updated remainder models to use lastest types HostIP and
 	DomainName
 	+ Added 'changeName', 'getHostNameByName', 'getHostNameByIP' and
